--- a/android/vision-quickstart/app/build.gradle
+++ b/android/vision-quickstart/app/build.gradle
@@ -16,6 +16,7 @@ android {
         vectorDrawables.useSupportLibrary = true
         setProperty("archivesBaseName", "vision-quickstart")
     }
+    /*
     signingConfigs {
         release {
             storeFile file("x.keystore")
@@ -24,6 +25,7 @@ android {
             keyPassword "cccc"
         }
     }
+    */
     buildTypes {
         proguard {
             debuggable false
@@ -34,13 +36,13 @@ android {
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.release
+            //signingConfig signingConfigs.release
         }
         debug {
             isDefault true
             minifyEnabled false
             proguardFiles 'proguard-rules.pro'
-            signingConfig signingConfigs.release
+            //signingConfig signingConfigs.release
         }
         testBuildType "debug"
     }
